# phoebe_ws

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  clearpath_key.gpg  joint_states.txt
src/dual_arm_mobile_description/: CMakeLists.txt  package.xml
src/dual_arm_mobile_description/meshes/: autec_antenna.STL  shelf.STL  ur_control_box.STL
src/dual_arm_mobile_description/xacro/: clearpath_r100.macro.xacro  ewellix_tlt500.macro.xacro  ur5e.macro.xacro
src/dual_arm_mobile_hw/: CMakeLists.txt  README.md  package.xml
src/dual_arm_mobile_hw/assets/: detected_can_20250519183751.pcd
src/dual_arm_mobile_hw/clearpath_config/: control.yaml  imu_filter.yaml  lidar2d_0.yaml  lidar2d_1.yaml  localization.yaml  robot.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
src/dual_arm_mobile_hw/config/: config.yaml
src/dual_arm_mobile_hw/config/control/: dual_arm_mobile.ros2_control.yaml
src/dual_arm_mobile_hw/config/moveit/: dual_arm_mobile_hw.srdf  hard_joint_limits.yaml  joint_limits.yaml  pose_ik_distance.yaml  pose_ik_speed.yaml  sensors_3d.yaml  servo.yaml
src/dual_arm_mobile_hw/description/: base_components.urdf.xacro  dual_arm_mobile_hw.urdf  dual_arm_mobile_hw.urdf.xacro  left_ur_attachment.xacro  picknik_ur_attachments_macro.xacro  right_ur_attachment.xacro
src/dual_arm_mobile_hw/launch/: agent_bridge.launch.xml  clearpath-vcan-bridge  lidar2d_0.launch.py  lidar2d_1.launch.py  localization.launch.py  platform-service.launch.py  platform.launch.py  robot_drivers_to_persist.launch.py  rs_cameras.launch.xml  sensors-service.launch.py  teleop_base.launch.py  teleop_joy.launch.py  vcan-service.launch.py
src/dual_arm_mobile_hw/launch/system_launch/: hardware_setup.launch.py
src/dual_arm_mobile_hw/objectives/: 3_waypoint_cycle.xml  clear_snapshot.xml  close_fridge.xml  close_gripper.xml  close_left_gripper.xml  close_right_gripper.xml  create_point_cloud_vector_from_masks.xml  demo_finish.xml  demo_initialization.xml  full_body_waypoints.xml  get_can_pose.xml  get_left_right_pick_pose_from_bottle_pose.xml  get_transform_frame_pose.xml  getleftrightpickposefrombottlepose.xml  getpositionvectorfromposestamped.xml  getquaternionvectorfromposestamped.xml  grab_can.xml  grasp_bottle_with_both_hands.xml  handoff.xml  initial_base_pose.yaml  interpolate_to_joint_state.xml  joint_trajectory.yaml  load_can_pointcloud.xml  locate_bottle_on_table.xml  locatebottleontable.xml  ml_register_bottle.xml  mobile_base_waypoint.xml  move_to_joint_state.xml  move_to_pose.xml  move_to_pose_phoebe.xml  move_to_waypoint.xml  move_to_waypoint_debug.xml  open_fridge_door.xml  open_gripper.xml  open_left_gripper.xml  open_right_gripper.xml  pick_bottle_and_place_in_rack.xml  plug_in_ethernet.xml  record_admittance_trajectory.xml  register_can.xml  (+15 more)
src/dual_arm_mobile_hw/scripts/: estop_publisher.py  mock_base_joint_states.py  odom_offset_node.py  odometry_joint_state_publisher.py  zero_odom_publisher.py
src/dual_arm_mobile_hw/waypoints/: waypoints.yaml
src/dual_arm_mobile_sim/: CMakeLists.txt  package.xml
src/dual_arm_mobile_sim/config/: config.yaml
src/dual_arm_mobile_sim/description/: bottle.xml  rack.xml  (+9 more)
src/phoebe_bridgeback_description/: CMakeLists.txt  package.xml
src/phoebe_hw/: CMakeLists.txt  README.md  beer_can.pcd  package.xml
src/phoebe_hw/assets/: detected_can_20250519183647.pcd
src/phoebe_hw/config/: config.yaml
src/phoebe_hw/description/: phoebe_hw.urdf.xacro
src/phoebe_hw/launch/: agent_bridge.launch.xml  robot_drivers_to_persist.launch.py  rs_cameras.launch.xml
src/phoebe_hw/objectives/: get_left_right_pick_pose_from_bottle_pose.xml  get_quaternion_vector_from_pose_stamped.xml  get_rack_pose_from_qr_code.xml  grasp_bottle_with_both_hands.xml  locate_bottle_on_table.xml  locatebottleontable.xml  pick_bottle_and_place_in_rack.xml  take_left_snapshot.xml  take_right_snapshot.xml
src/phoebe_hw/scripts/: mock_base_joint_states.py  velocity_pub.py
src/phoebe_hw/waypoints/: waypoints.yaml
src/phoebe_sim/: CMakeLists.txt  package.xml
src/phoebe_sim/config/: config.yaml
src/phoebe_sim/config/control/: dual_arm.ros2_control.yaml
src/phoebe_sim/config/moveit/: joint_jog.yaml  joint_limits.yaml  pose_ik_distance.yaml  pose_jog.yaml
src/phoebe_sim/description/: bottle.xml  dual_arm_scene.xml  front_right_wheel_link.xml  phoebe_sim.urdf.xacro  rack.xml  ridgeback.urdf.xacro  trainer.xml
src/phoebe_sim/description/assets/: base.stl  bottle.stl  omni_wheel_1.stl
src/phoebe_sim/description/assets/lifts/: base.stl  lift.xml  lower.stl  plate.stl
src/phoebe_sim/description/assets/trainer_hatch/collision/: cabinet_door_3.stl  cylinder_mockup_full_length.stl  drawer_1_face.stl  front_left_face.stl  front_right_face.stl
src/phoebe_sim/description/assets/trainer_hatch/visual/: cabinet_door_4.stl  floating_hinge_handle.stl  grab_handle.stl  hatch_4060_face.stl  push_latch_handle.stl  push_latch_housing.stl  round_latch_handle.stl  side_face_lower.stl
src/phoebe_sim/launch/: view_robot.launch.py
src/phoebe_sim/meshes/: arm_mount.STL  monitor.STL  monitor_hinge_base.STL
src/phoebe_sim/models/: l2g.onnx
src/phoebe_sim/objectives/: close_right_gripper.xml  log_message_example.xml  ml_auto_grasp_object_from_clicked_point.xml  mobile_base_waypoint.xml  multi-tip_path_ik_example.xml  multi-tip_path_move_push_bottle.xml  multi-tip_path_move_up_bottle.xml  multi-tip_path_move_with_pose.xml  multi-tip_path_re-orient_and_move_up.xml  multi-tip_path_re-orient_bottle.xml  multi-tip_path_re-orient_move_up_and_push.xml  multi_tip_pose_ik_example.xml  record_admittance_trajectory.xml  request_teleoperation.xml  reset_simulation_to_keyframe.xml  segment_image_from_no_negative_text_prompt_subtree.xml  single-tip_path_admittance_move_push_bottle.xml  take_left_snapshot.xml  take_right_snapshot.xml  wrist_snap.xml
src/phoebe_sim/rviz/: view_robot.rviz
src/phoebe_sim/waypoints/: waypoints.yaml
src/pose_to_joint_state/: CMakeLists.txt  behavior_plugin.yaml  package.xml  pose_to_joint_state_plugin_description.xml
(+84 files in other folders)
