<?xml version="1.0" ?>
<package format="3">
  <name>dual_arm_mobile_hw</name>
  <version>7.3.0</version>

  <description>Hardware configuration package for PickNik's dual UR5e Ridgeback system.</description>

  <maintainer email="david.yackzan@picknik.ai">David Yackzan</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies from description file -->
  <exec_depend>clearpath_control</exec_depend>
  <exec_depend>clearpath_manipulators_description</exec_depend>
  <exec_depend>clearpath_platform_description</exec_depend>
  <exec_depend>clearpath_sensors_description</exec_depend>
  <exec_depend>ewellix_description</exec_depend>
  <exec_depend>picknik_accessories</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
