<?xml version="1.0" ?>
<package format="3">
  <name>phoebe_hw</name>
  <version>8.3.0</version>

  <description>
    MoveIt Pro hardware configuration package for the dual UR5e + Ridgeback
    system.
  </description>

  <maintainer email="david.yackzan@picknik.ai">David Yackzan</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_studio_agent</exec_depend>

  <exec_depend>clearpath_controller_interface</exec_depend>
  <exec_depend>clearpath_hardware_interfaces</exec_depend>
  <exec_depend>clearpath_manipulators_description</exec_depend>
  <exec_depend>clearpath_platform_description</exec_depend>
  <exec_depend>clearpath_sensors_description</exec_depend>
  <exec_depend>ewellix_description</exec_depend>
  <exec_depend>moveit_studio_ur_pstop_manager</exec_depend>
  <exec_depend>picknik_accessories</exec_depend>
  <exec_depend>robotiq_controllers</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>robotiq_driver</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
